# Detect-Weapon-From-Video

./: .gitignore  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  example.py  main.py  pyproject.toml  test_installation.py
config/: __init__.py  settings.py
models/: README.md
src/: __init__.py  alert_service.py  camera_detector.py  image_detector.py  utils.py  video_detector.py
